@@ -28,9 +28,16 @@ from urllib import quote, urlencode
 import re
 import simplejson as json
 
-__all__ = ['ResourceNotFound', 'ResourceConflict', 'ServerError', 'Server',
-           'Database', 'Document', 'ViewResults', 'Row']
+__all__ = ['PreconditionFailed', 'ResourceNotFound', 'ResourceConflict',
+           'ServerError', 'Server', 'Database', 'Document', 'ViewResults',
+           'Row']
 __docformat__ = 'restructuredtext en'
+
+
+class PreconditionFailed(Exception):
+    """Exception raised when a 412 HTTP error is received in response to a
+    request.
+    """
 
 
 class ResourceNotFound(Exception):
@@ -196,8 +203,6 @@ class Database(object):
     True
     >>> len(db)
     2
-    >>> list(db)            #doctest: +ELLIPSIS
-    [u'...', u'JohnDoe']
 
     >>> del server['python-tests']
     """
@@ -291,8 +296,8 @@ class Database(object):
         except ResourceNotFound:
             return default
 
-    def query(self, code, content_type='text/javascript', wrapper=None,
-              **options):
+    def query(self, map_fun, reduce_fun=None, language='javascript',
+              wrapper=None, **options):
         """Execute an ad-hoc query (a "temp view") against the database.
         
         >>> server = Server('http://localhost:5984/')
@@ -300,34 +305,38 @@ class Database(object):
         >>> db['johndoe'] = dict(type='Person', name='John Doe')
         >>> db['maryjane'] = dict(type='Person', name='Mary Jane')
         >>> db['gotham'] = dict(type='City', name='Gotham City')
-        >>> code = '''function(doc) {
-        ...     if (doc.type=='Person')
-        ...         map(doc.name, null);
+        >>> map_fun = '''function(doc) {
+        ...     if (doc.type == 'Person')
+        ...         emit(doc.name, null);
         ... }'''
-        >>> for row in db.query(code):
+        >>> for row in db.query(map_fun):
         ...     print row.key
         John Doe
         Mary Jane
         
-        >>> for row in db.query(code, descending=True):
+        >>> for row in db.query(map_fun, descending=True):
         ...     print row.key
         Mary Jane
         John Doe
         
-        >>> for row in db.query(code, key='John Doe'):
+        >>> for row in db.query(map_fun, key='John Doe'):
         ...     print row.key
         John Doe
         
         >>> del server['python-tests']
         
-        :param code: the code of the view function
-        :param content_type: the MIME type of the code, which determines the
-                             language the view function is written in
+        :param map_fun: the code of the map function
+        :param reduce_fun: the code of the reduce function (optional)
+        :param language: the language of the functions, to determine which view
+                         server to use
+        :param wrapper: an optional callable that should be used to wrap the
+                        result rows
+        :param options: optional query string parameters
         :return: the view reults
         :rtype: `ViewResults`
         """
-        return TemporaryView(uri(self.resource.uri, '_temp_view'), code,
-                             content_type=content_type, wrapper=wrapper,
+        return TemporaryView(uri(self.resource.uri, '_temp_view'), map_fun,
+                             reduce_fun, language=language, wrapper=wrapper,
                              http=self.resource.http)(**options)
 
     def update(self, documents):
@@ -355,12 +364,14 @@ class Database(object):
         :since: version 0.2
         """
         documents = list(documents)
-        data = self.resource.post('_bulk_docs', content=documents)
-        for idx, result in enumerate(data['results']):
-            assert 'ok' in result # FIXME: how should error handling work here?
-            doc = documents[idx]
-            doc.update({'_id': result['id'], '_rev': result['rev']})
-            yield doc
+        data = self.resource.post('_bulk_docs', content={'docs': documents})
+        assert data['ok'] # FIXME: Should probably raise a proper exception
+        def _update():
+            for idx, result in enumerate(data['new_revs']):
+                doc = documents[idx]
+                doc.update({'_id': result['id'], '_rev': result['rev']})
+                yield doc
+        return _update()
 
     def view(self, name, wrapper=None, **options):
         """Execute a predefined view.
@@ -375,6 +386,11 @@ class Database(object):
         
         >>> del server['python-tests']
         
+        :param name: the name of the view, including the `_view/design_docid`
+                     prefix for custom views
+        :param wrapper: an optional callable that should be used to wrap the
+                        result rows
+        :param options: optional query string parameters
         :return: the view results
         :rtype: `ViewResults`
         """
@@ -443,21 +459,24 @@ class PermanentView(View):
 class TemporaryView(View):
     """Representation of a temporary view."""
 
-    def __init__(self, uri, code=None, content_type='text/javascript',
-                 wrapper=None, http=None):
+    def __init__(self, uri, map_fun=None, reduce_fun=None,
+                 language='javascript', wrapper=None, http=None):
         View.__init__(self, uri, wrapper=wrapper, http=http)
         self.resource = Resource(http, uri)
-        self.code = code
-        self.content_type = content_type
+        self.map_fun = map_fun
+        self.reduce_fun = reduce_fun
+        self.language = language
 
     def __repr__(self):
-        return '<%s %r>' % (type(self).__name__, self.code)
+        return '<%s %r %r>' % (type(self).__name__, self.map_fun,
+                               self.reduce_fun)
 
     def _exec(self, options):
-        headers = {}
-        if self.content_type:
-            headers['Content-Type'] = self.content_type
-        return self.resource.post(content=self.code, headers=headers,
+        body = {'map': self.map_fun, 'language': self.language}
+        if self.reduce_fun:
+            body['reduce'] = self.reduce_fun
+        return self.resource.post(content=json.dumps(body),
+                                  headers={'Content-Type': 'application/json'},
                                   **self._encode_options(options))
 
 
@@ -473,10 +492,10 @@ class ViewResults(object):
     >>> db['johndoe'] = dict(type='Person', name='John Doe')
     >>> db['maryjane'] = dict(type='Person', name='Mary Jane')
     >>> db['gotham'] = dict(type='City', name='Gotham City')
-    >>> code = '''function(doc) {
-    ...     map([doc.type, doc.name], doc.name);
+    >>> map_fun = '''function(doc) {
+    ...     emit([doc.type, doc.name], doc.name);
     ... }'''
-    >>> results = db.query(code)
+    >>> results = db.query(map_fun)
 
     At this point, the view has not actually been accessed yet. It is accessed
     as soon as it is iterated over, its length is requested, or one of its
@@ -646,6 +665,8 @@ class Resource(object):
                 raise ResourceNotFound(error)
             elif status_code == 409:
                 raise ResourceConflict(error)
+            elif status_code == 412:
+                raise PreconditionFailed(error)
             else:
                 raise ServerError((status_code, error))
 
